objects/SharePoint_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Auth_URL_Path__c</fullName>
        <label>Auth URL Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type_Id__c</fullName>
        <label>Content Type Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_URL_Path__c</fullName>
        <label>Create URL Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_URL_Path__c</fullName>
        <label>Delete URL Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Find_Files_URL__c</fullName>
        <label>Find Files URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Find_Folder_URL__c</fullName>
        <label>Find Folder URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEMS_Content_Type_Id__c</fullName>
        <label>GEMS Content Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Item_Name__c</fullName>
        <label>List Item Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Name__c</fullName>
        <label>List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_URL_Path__c</fullName>
        <label>List URL Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realm_Path__c</fullName>
        <label>Realm Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_Resource__c</fullName>
        <label>SharePoint Resource</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_URL__c</fullName>
        <label>SharePoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Realm__c</fullName>
        <label>Site Realm</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Path__c</fullName>
        <label>Team Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Expired_Response_Text__c</fullName>
        <label>Token Expired Response Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_URL__c</fullName>
        <label>Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_URL_Path__c</fullName>
        <label>Update URL Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_URL_Path__c</fullName>
        <label>View URL Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SharePoint Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Content_Type_Id__c</columns>
        <columns>GEMS_Content_Type_Id__c</columns>
        <columns>Realm_Path__c</columns>
        <columns>Site_Realm__c</columns>
        <columns>Token_URL__c</columns>
        <columns>SharePoint_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>SharePoint Configurations</pluralLabel>
</CustomObject>